--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -29,12 +29,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:padding="15dp"
             android:layout_marginBottom="50sp"
+            android:padding="15dp"
             android:text="Forgot Password"
-            android:textStyle="bold"
-            android:textColor="@android:color/white"
-            android:textSize="24dp" />
+            android:textColor="@android:color/black"
+            android:textSize="24dp"
+            android:textStyle="bold" />
 
 
 
@@ -56,24 +56,26 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
-            android:text="Reset Password"
+            android:background="@color/colorAccent"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:textColor="#FFF"
-            android:visibility="visible"
-            android:textStyle="bold" />
+            android:text="Reset Password"
+            android:textColor="#000"
+            android:textStyle="bold"
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/btn_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="go back"
-            android:visibility="visible"
             android:layout_marginTop="20dip"
+            android:background="@color/colorAccent"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:textColor="#FFF"
-            android:textStyle="bold"/>
+            android:text="go back"
+            android:textColor="#000"
+            android:textStyle="bold"
+            android:visibility="visible" />
     </LinearLayout>
 
     <ProgressBar
