--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -7,29 +7,38 @@
     android:background="@color/colorPrimary">
 
     <LinearLayout
+        android:id="@+id/graph_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginRight="15dp"
         android:layout_marginLeft="15dp">
 
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/pieChart"
-            android:layout_height="300dp"
+            android:layout_height="400dp"
             android:layout_width="match_parent"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Subheader_homepage"/>
-
-        <ImageButton
-            android:id="@+id/buttonSignOut"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:layout_margin="50dp"
-            android:background="@drawable/ic_launcher_background" />
     </LinearLayout>
+
+    <ListView
+        android:id="@+id/stock_list"
+        android:layout_marginTop="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/graph_layout"/>
+
+    <Button
+        android:id="@+id/buttonSignOut"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="12dp"
+        android:text="Sign out"/>
 
 </RelativeLayout>
