--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:id="@+id/signInPage"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@color/colorPrimary">
+    android:background="@color/BLACKS_lightslategrey">
 
     <LinearLayout
         android:layout_centerVertical="true"
@@ -37,7 +37,7 @@
                     android:layout_height="85dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="25dp"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@mipmap/ic_launcher_round" />
 
                 <EditText
                     android:id="@+id/editTextEmail"
@@ -66,6 +66,7 @@
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:textColor="#FFF"
+                    android:background="@color/BLACKS_black"
                     android:visibility="visible"
                     android:textStyle="bold" />
 
