--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -41,7 +41,7 @@
                         android:layout_gravity="center_horizontal"
                         android:layout_marginBottom="20sp"
                         android:layout_marginTop="20sp"
-                        android:src="@mipmap/ic_launcher_round"/>
+                        android:src="@mipmap/ic_launcher"/>
 
                         <EditText
                             android:id="@+id/editTextName"
