--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="BLACKS_lightGray">#D3D3D3</color>
     <color name="BLACKS_white">#FFF</color>
     <color name="BLACKS_lightslategrey">#778899</color>
+
+    <color name="background">#F8F8F7</color>
+    <color name="text">#5B5A62</color>
+
+
 </resources>
