--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
                     android:layout_height="40dp"
                     android:layout_margin="5dp"
                     android:hint="@string/enter_email"
-                    android:textColor="#fff"
+                    android:textColor="@color/text"
                     android:inputType="textEmailAddress"
                     android:backgroundTint="@color/text"
                     android:textColorHint="@color/text"
@@ -57,7 +57,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:hint="@string/enter_password"
-                    android:textColor="#fff"
+                    android:textColor="@color/text"
                     android:inputType="textPassword"
                     android:backgroundTint="@color/text"
                     android:textColorHint="@color/text"
