--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:fitsSystemWindows="true"
-    android:background="@color/colorPrimary">
+    android:background="@color/background">
 
 
     <LinearLayout
@@ -19,19 +19,19 @@
 
 
         <ImageView
-            android:layout_width="85dp"
-            android:layout_height="85dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="25dp"
+
             android:src="@mipmap/ic_launcher" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="50sp"
+            android:layout_marginBottom="20dp"
             android:padding="15dp"
-            android:text="Forgot Password"
+            android:text="Forgot Password?"
             android:textColor="@android:color/black"
             android:textSize="24dp"
             android:textStyle="bold" />
@@ -43,24 +43,23 @@
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="20dp"
-                android:hint="Email"
+                android:layout_margin="10dp"
+                android:hint="Enter Email"
                 android:inputType="textEmailAddress"
                 android:textColor="@android:color/white"
-                android:textColorHint="@android:color/white"
+                android:textColorHint="@color/text"
                 android:textColorLink="#FFF" />
 
         <Button
             android:id="@+id/btn_reset_password"
-            android:layout_width="fill_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dip"
-            android:background="@color/colorAccent"
+            android:layout_marginTop="20dp"
+            android:background="@color/BLACKS_black"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:text="Reset Password"
-            android:textColor="#000"
+            android:textColor="@color/background"
             android:textStyle="bold"
             android:visibility="visible" />
 
@@ -68,12 +67,12 @@
             android:id="@+id/btn_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dip"
-            android:background="@color/colorAccent"
+            android:layout_marginTop="20dp"
+            android:background="@color/BLACKS_black"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:text="go back"
-            android:textColor="#000"
+            android:textColor="@color/background"
             android:textStyle="bold"
             android:visibility="visible" />
     </LinearLayout>
