Calculate and display FolioScore

--- a/app/src/main/res/layout/content_analysis.xml
+++ b/app/src/main/res/layout/content_analysis.xml
@@ -15,9 +15,56 @@
         <de.codecrafters.tableview.TableView xmlns:table="http://schemas.android.com/apk/res-auto"
             android:id="@+id/tableView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="300dp"
             android:layout_marginTop="16dp"
             table:tableView_columnCount="2" />
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="#c0c0c0" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="81dp"
+            android:layout_marginTop="8dp"
+            android:text="Based on an analysis of online sentiment and public opinion towards this stock, we've given it a FolioScore™ of:"
+            android:textAlignment="center"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/score"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="32sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="scale 0-100"
+            android:layout_marginBottom="8dp"
+            android:textAlignment="center" />
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="#c0c0c0" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Recent News:"
+            android:textSize="18sp" />
+
+        <ListView
+            android:id="@+id/links"
+            android:layout_width="wrap_content"
+            android:layout_height="500dp"
+            android:layout_marginTop="8dp"></ListView>
 
     </LinearLayout>
 </ScrollView>
