--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -8,73 +8,85 @@
     android:fitsSystemWindows="true"
     android:background="@color/background">
 
-
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_centerVertical="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:gravity="center"
         android:orientation="vertical"
-        android:padding="25dp">
-
-
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center_horizontal"
-
-            android:src="@mipmap/ic_launcher" />
-
-        <TextView
+        android:layout_marginTop="30dp">
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="20dp"
-            android:padding="15dp"
-            android:text="Forgot Password?"
-            android:textColor="@android:color/black"
-            android:textSize="24dp"
-            android:textStyle="bold" />
-
-
-
-
-            <EditText
-                android:id="@+id/email"
-                android:layout_width="match_parent"
+            android:layout_below="@+id/login_title"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:elevation="4dp"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:hint="Enter Email"
-                android:inputType="textEmailAddress"
-                android:textColor="@android:color/white"
-                android:textColorHint="@color/text"
-                android:textColorLink="#FFF" />
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:orientation="vertical"
+                android:paddingTop="30dp">
 
-        <Button
-            android:id="@+id/btn_reset_password"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:background="@color/BLACKS_black"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="Reset Password"
-            android:textColor="@color/background"
-            android:textStyle="bold"
-            android:visibility="visible" />
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="70sp"
+                    android:src="@mipmap/ic_launcher"/>
 
-        <Button
-            android:id="@+id/btn_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:background="@color/BLACKS_black"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="go back"
-            android:textColor="@color/background"
-            android:textStyle="bold"
-            android:visibility="visible" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="20dp"
+                    android:padding="15dp"
+                    android:text="Forgot Password?"
+                    android:textColor="@android:color/black"
+                    android:textSize="24dp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:hint="Enter Email"
+                    android:inputType="textEmailAddress"
+                    android:textColor="@android:color/white"
+                    android:textColorHint="@color/text"
+                    android:textColorLink="#FFF" />
+
+                <Button
+                    android:id="@+id/btn_reset_password"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="20dp"
+                    android:background="@color/BLACKS_black"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="Reset Password"
+                    android:textColor="@color/background"
+                    android:textStyle="bold"
+                    android:visibility="visible" />
+
+                <Button
+                    android:id="@+id/btn_back"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:background="@color/BLACKS_black"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="go back"
+                    android:textAlignment="center"
+                    android:textColor="@color/background"
+                    android:textStyle="bold"
+                    android:visibility="visible" />
+            </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
 
     <ProgressBar
