--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="30dp"
+        android:id="@+id/linearLayout">
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -44,57 +45,79 @@
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_margin="5dp"
-                    android:hint="@string/enter_email"
-                    android:textColor="@color/text"
-                    android:inputType="textEmailAddress"
                     android:backgroundTint="@color/text"
-                    android:textColorHint="@color/text"
-                    />
+                    android:fontFamily="@font/abril_fatface"
+                    android:hint="@string/enter_email"
+                    android:inputType="textEmailAddress"
+                    android:textColor="@color/text"
+                    android:textColorHint="@color/text" />
 
                 <EditText
                     android:id="@+id/editTextPassword"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_margin="5dp"
-                    android:hint="@string/enter_password"
-                    android:textColor="@color/text"
-                    android:inputType="textPassword"
                     android:backgroundTint="@color/text"
-                    android:textColorHint="@color/text"
-                    />
+                    android:fontFamily="@font/abril_fatface"
+                    android:hint="@string/enter_password"
+                    android:inputType="textPassword"
+                    android:textColor="@color/text"
+                    android:textColorHint="@color/text" />
 
                 <Button
                     android:id="@+id/buttonSignIn"
-                    android:layout_height="wrap_content"
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:text="@string/sign_in"
+                    android:background="@color/text"
+                    android:fontFamily="@font/bungee_inline"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
+                    android:text="@string/sign_in"
                     android:textColor="@color/background"
-                    android:background="@color/BLACKS_black"
-                    android:visibility="visible"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:visibility="visible" />
 
                 <TextView
-                    android:text="@string/not_registered"
-                    android:textColor="@color/text"
                     android:id="@+id/textViewSignUp"
-                    android:textAlignment="center"
-                    android:layout_margin="20dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:text="Forgot Password? Click here"
-                    android:textColor="@color/text"
-                    android:id="@+id/textViewForgotPassword"
-                    android:textAlignment="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    />
+                    android:layout_margin="20dp"
+                    android:fontFamily="@font/abril_fatface"
+                    android:text="@string/not_registered"
+                    android:textAlignment="center"
+                    android:textColor="@color/text" />
+
+                <TextView
+                    android:id="@+id/textViewForgotPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/abril_fatface"
+                    android:text="Forgot Password? Click here"
+                    android:textAlignment="center"
+                    android:textColor="@color/text" />
             </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/linearLayout"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="450dp"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:ems="10"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:fontFamily="@font/leckerli_one"
+        android:inputType="textPersonName"
+        android:text="folio"
+        android:textAlignment="center"
+        android:textColor="@color/text"
+        android:textSize="30dp" />
+
 </RelativeLayout>
 
